[gd_scene load_steps=11 format=3 uid="uid://dm8jtvi22g6i4"]

[ext_resource type="Script" path="res://Scenes/Main/Scripts/Main.gd" id="1_k5iek"]
[ext_resource type="Texture2D" uid="uid://dg8mkt5ggmeun" path="res://Sprites/animation/1.png" id="1_uldr8"]
[ext_resource type="Texture2D" uid="uid://cr6542uaxcg3n" path="res://Sprites/animation/2.png" id="2_7tuwf"]
[ext_resource type="Texture2D" uid="uid://bk6f183uw7byb" path="res://Sprites/animation/3.png" id="3_6w3nd"]
[ext_resource type="Texture2D" uid="uid://bfs5p7i1ea03t" path="res://Sprites/animation/4.png" id="4_8x8l4"]
[ext_resource type="Texture2D" uid="uid://dmpqrrxsvdpjy" path="res://Sprites/animation/5.png" id="5_cg83a"]
[ext_resource type="Texture2D" uid="uid://bf2fhoccclku1" path="res://Sprites/animation/6.png" id="6_n1bfh"]
[ext_resource type="Texture2D" uid="uid://dnphvgcqi64f" path="res://Sprites/animation/7.png" id="7_tqaa4"]
[ext_resource type="Texture2D" uid="uid://1egbbebfooxb" path="res://Sprites/animation/8.png" id="8_jcekq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8aot6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uldr8")
}, {
"duration": 1.0,
"texture": ExtResource("2_7tuwf")
}, {
"duration": 1.0,
"texture": ExtResource("3_6w3nd")
}, {
"duration": 1.0,
"texture": ExtResource("4_8x8l4")
}, {
"duration": 1.0,
"texture": ExtResource("5_cg83a")
}, {
"duration": 1.0,
"texture": ExtResource("6_n1bfh")
}, {
"duration": 1.0,
"texture": ExtResource("7_tqaa4")
}, {
"duration": 1.0,
"texture": ExtResource("8_jcekq")
}],
"loop": false,
"name": &"animation",
"speed": 8.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_k5iek")

[node name="AS2D" type="AnimatedSprite2D" parent="."]
position = Vector2(547, 268)
sprite_frames = SubResource("SpriteFrames_8aot6")
animation = &"animation"

[node name="Button" type="Button" parent="."]
offset_left = 78.0
offset_top = 147.0
offset_right = 227.0
offset_bottom = 191.0
text = "Сыграть анимацию"

[node name="Label" type="Label" parent="."]
offset_left = 88.0
offset_top = 368.0
offset_right = 285.0
offset_bottom = 391.0
text = "Анимация проигралась "

[node name="Count" type="Label" parent="."]
offset_left = 288.0
offset_top = 368.0
offset_right = 312.0
offset_bottom = 391.0
text = "0"

[node name="Label3" type="Label" parent="."]
offset_left = 312.0
offset_top = 368.0
offset_right = 344.0
offset_bottom = 391.0
text = "раз"

[node name="Status" type="Label" parent="."]
offset_left = 88.0
offset_top = 424.0
offset_right = 128.0
offset_bottom = 447.0
text = "Анимация не запускалась"

[connection signal="animation_finished" from="AS2D" to="." method="_on_as_2d_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
